Added code to refresh job openings list after job creation. Job create and update UI fixes.

--- a/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
@@ -59,6 +59,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_business_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/nameOfYourCompanyText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -77,6 +78,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_work_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/jobTitleText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -95,6 +97,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_list_black_24"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:hint="@string/jobDescriptionText"
@@ -129,6 +132,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_school_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/desiredQualificationText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -147,6 +151,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_work_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/desiredWorkExText"
             android:inputType="number"
             android:paddingLeft="15dp"
@@ -165,6 +170,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_place_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/placeOfWorkText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -197,6 +203,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_whatshot_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/skillText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -215,6 +222,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_whatshot_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/skillText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -233,6 +241,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_whatshot_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/skillText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -265,6 +274,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_language_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/languageText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -284,6 +294,7 @@
             android:layout_marginBottom="76dp"
             android:background="@drawable/et_login"
             android:drawableStart="@drawable/baseline_language_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/languageText"
             android:inputType="text"
             android:paddingLeft="15dp"
