--- a/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
@@ -58,7 +58,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_ballot_black_24"
+            android:drawableStart="@drawable/baseline_business_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/nameOfYourCompanyText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -76,7 +77,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_ballot_black_24"
+            android:drawableStart="@drawable/baseline_work_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/jobTitleText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -94,7 +96,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_ballot_black_24"
+            android:drawableStart="@drawable/baseline_list_black_24"
+            android:drawablePadding="10dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:hint="@string/jobDescriptionText"
@@ -128,7 +131,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_person_black_24"
+            android:drawableStart="@drawable/baseline_school_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/desiredQualificationText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -146,7 +150,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_assignment_ind_black_24"
+            android:drawableStart="@drawable/baseline_work_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/desiredWorkExText"
             android:inputType="number"
             android:paddingLeft="15dp"
@@ -164,7 +169,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_my_location_black_24"
+            android:drawableStart="@drawable/baseline_place_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/placeOfWorkText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -196,7 +202,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_import_contacts_black_24"
+            android:drawableStart="@drawable/baseline_whatshot_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/skillText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -214,7 +221,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_import_contacts_black_24"
+            android:drawableStart="@drawable/baseline_whatshot_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/skillText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -232,7 +240,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_import_contacts_black_24"
+            android:drawableStart="@drawable/baseline_whatshot_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/skillText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -264,7 +273,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_import_contacts_black_24"
+            android:drawableStart="@drawable/baseline_language_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/languageText"
             android:inputType="text"
             android:paddingLeft="15dp"
@@ -283,7 +293,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="76dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@drawable/baseline_import_contacts_black_24"
+            android:drawableStart="@drawable/baseline_language_black_24"
+            android:drawablePadding="10dp"
             android:hint="@string/languageText"
             android:inputType="text"
             android:paddingLeft="15dp"
