--- a/frontend/android/app/src/main/res/layout/activity_job_openings_list.xml
+++ b/frontend/android/app/src/main/res/layout/activity_job_openings_list.xml
@@ -60,10 +60,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/login_btn"
         android:text="@string/addNewJobOpeningText"
-        android:padding="10dp"
         android:textColor="#F2F2F2"
         android:textSize="18sp"
         android:drawablePadding="8dp"
+        android:paddingRight="15dp"
+        android:paddingLeft="15dp"
         android:drawableLeft="@android:drawable/ic_menu_add"
         android:drawableTint="@color/colorWhite"
         android:layout_marginBottom="10dp"
