--- a/frontend/android/app/src/main/res/layout/activity_candidate_dashboard.xml
+++ b/frontend/android/app/src/main/res/layout/activity_candidate_dashboard.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_width="match_parent">
 
             <android.support.v7.widget.Toolbar
@@ -33,16 +33,12 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_marginTop="100dp"
-
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:paddingTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.mindorks.placeholderview.SwipePlaceHolderView
-
+            android:background="@color/colorWhite"
             android:id="@+id/swipeView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
