--- a/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
@@ -1,7 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/AppBarLayout"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                android:background="?attr/colorPrimary" />
+
+        </android.support.design.widget.AppBarLayout>
+<ScrollView
+    android:layout_below="@+id/AppBarLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.AddNewJobOpening">
@@ -11,6 +34,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/TVScreenTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -320,3 +344,6 @@
     </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
+    </RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
