Get All candidates API bug fixes.

--- a/frontend/android/app/src/main/res/layout/activity_company_dashboard.xml
+++ b/frontend/android/app/src/main/res/layout/activity_company_dashboard.xml
@@ -11,9 +11,6 @@
 
 
     <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -42,6 +39,23 @@
             android:id="@+id/swipeView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/TVNoItems"
+            android:text="No jobs to show."
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
+            android:visibility="gone"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="60dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:scrollbars="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
