--- a/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_add_new_job_opening.xml
@@ -358,7 +358,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="76dp"
             android:background="@drawable/et_login"
-            android:drawableStart="@android:drawable/ic_dialog_email"
+            android:drawableStart="@drawable/baseline_email_black_24"
             android:drawablePadding="10dp"
             android:hint="@string/contactEmailText"
             android:inputType="textEmailAddress"
