--- a/frontend/android/app/src/main/res/layout/alert_progress.xml
+++ b/frontend/android/app/src/main/res/layout/alert_progress.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00000000"
     android:gravity="center">
 
-    <fr.castorflex.android.circularprogressbar.CircularProgressBar
+    <com.softwaregiants.careertinder.customViews.circularProgressBar.CircularProgressBar
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:indeterminate="true"
-        app:cpb_color="#FFee44"
-        app:cpb_colors="@array/mycolors"
+        app:cpb_color="@color/colorPrimaryDark"
         app:cpb_rotation_speed="1.0"
         app:cpb_sweep_speed="1.0"
-        app:cpb_stroke_width="4dp"
+        app:cpb_stroke_width="9dp"
         app:cpb_min_sweep_angle="10"
         app:cpb_max_sweep_angle="300"
         />
