--- a/frontend/android/app/src/main/res/values-v21/styles.xml
+++ b/frontend/android/app/src/main/res/values-v21/styles.xml
@@ -4,5 +4,18 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="cpbStyle">@style/CircularThemeProgressBar</item>
+    </style>
+
+    <style name="CircularThemeProgressBar" parent="Widget.AppCompat.ProgressBar">
+        <item name="cpb_color">@color/cpb_default_color</item>
+        <item name="cpb_stroke_width">@dimen/cpb_default_stroke_width</item>
+        <item name="cpb_min_sweep_angle">@integer/cpb_default_min_sweep_angle</item>
+        <item name="cpb_max_sweep_angle">@integer/cpb_default_max_sweep_angle</item>
+        <item name="cpb_sweep_speed">@string/cpb_default_sweep_speed</item>
+        <item name="cpb_rotation_speed">@string/cpb_default_rotation_speed</item>
+    </style>
+
+    <style name="CPB" parent="Widget.AppCompat.ProgressBar">
     </style>
 </resources>
