--- a/frontend/android/app/src/main/res/values/styles.xml
+++ b/frontend/android/app/src/main/res/values/styles.xml
@@ -7,10 +7,36 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="cpbStyle">@style/CircularThemeProgressBar</item>
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="CircularThemeProgressBar" parent="Widget.AppCompat.ProgressBar">
+        <item name="cpb_color">@color/colorAccent</item>
+        <item name="cpb_stroke_width">5dp</item>
+        <item name="cpb_min_sweep_angle">20</item>
+        <item name="cpb_max_sweep_angle">300</item>
+        <item name="cpb_sweep_speed">1</item>
+        <item name="cpb_rotation_speed">1</item>
+    </style>
+
+    <style name="Theme.SmoothProgressBarDefaults" parent="Theme.AppCompat.Light">
+        <item name="cpbStyle">@style/CircularProgressBar</item>
+    </style>
+
+    <style name="CPB" parent="Widget.AppCompat.ProgressBar">
+    </style>
+
+    <style name="CircularProgressBar" parent="CPB">
+        <item name="cpb_color">@color/cpb_default_color</item>
+        <item name="cpb_stroke_width">@dimen/cpb_default_stroke_width</item>
+        <item name="cpb_min_sweep_angle">@integer/cpb_default_min_sweep_angle</item>
+        <item name="cpb_max_sweep_angle">@integer/cpb_default_max_sweep_angle</item>
+        <item name="cpb_sweep_speed">@string/cpb_default_sweep_speed</item>
+        <item name="cpb_rotation_speed">@string/cpb_default_rotation_speed</item>
+    </style>
 </resources>
