No items to swipe
Added no items text to swipe screens.

--- a/frontend/android/app/src/main/res/layout/activity_company_dashboard.xml
+++ b/frontend/android/app/src/main/res/layout/activity_company_dashboard.xml
@@ -42,12 +42,11 @@
 
         <TextView
             android:id="@+id/TVNoItems"
-            android:text="No jobs to show."
+            android:text="No profiles to show."
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
             android:layout_marginTop="40dp"
-            android:visibility="gone"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="60dp"
             android:textColor="@color/colorPrimaryDark"
