Sign Up UI fixes
Fixed drawables for sign up screen.

--- a/frontend/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/frontend/android/app/src/main/res/layout/activity_sign_up.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,10 +35,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
+        android:drawablePadding="10dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/et_login"
-        android:drawableStart="@android:drawable/ic_menu_myplaces"
+        android:drawableStart="@drawable/baseline_account_circle_black_24"
         android:hint="@string/fullNameText"
         android:inputType="text"
         android:paddingLeft="15dp"
@@ -54,10 +54,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
+        android:drawablePadding="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/et_login"
-        android:drawableStart="@android:drawable/sym_action_email"
+        android:drawableStart="@drawable/baseline_email_black_24"
         android:ems="10"
         android:hint="@string/emailAddressText"
         android:inputType="textEmailAddress"
@@ -75,9 +76,10 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:drawablePadding="10dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/et_login"
-        android:drawableStart="@android:drawable/ic_lock_idle_lock"
+        android:drawableStart="@drawable/baseline_lock_open_black_24"
         android:ems="10"
         android:hint="@string/passwordText"
         android:inputType="textPassword"
@@ -94,9 +96,10 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:drawablePadding="10dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/et_login"
-        android:drawableStart="@android:drawable/ic_lock_idle_lock"
+        android:drawableStart="@drawable/baseline_lock_open_black_24"
         android:ems="10"
         android:hint="@string/confirmPasswordText"
         android:inputType="textPassword"
