--- a/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
+++ b/frontend/android/app/src/main/res/layout/activity_edit_job_opening.xml
@@ -198,22 +198,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ETDesiredQualification" />
 
-                <EditText
-                    android:id="@+id/ETPlaceOfWork"
+                <Spinner
+                    android:id="@+id/spinnerPlaceOfWork"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/et_login"
-                    android:drawableStart="@drawable/baseline_place_black_24"
-                    android:drawablePadding="10dp"
-                    android:hint="@string/placeOfWorkText"
-                    android:inputType="text"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:textColorHint="#6F7070"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ETDesiredWorkExperience" />
 
@@ -229,7 +223,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ETPlaceOfWork" />
+                    app:layout_constraintTop_toBottomOf="@+id/spinnerPlaceOfWork" />
 
                 <EditText
                     android:id="@+id/ETSkill1"
@@ -302,43 +296,31 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ETSkill3" />
 
-                <EditText
-                    android:id="@+id/ETLanguage1"
+                <Spinner
+                    android:id="@+id/spinnerLanguage1"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/et_login"
-                    android:drawableStart="@drawable/baseline_language_black_24"
-                    android:drawablePadding="10dp"
-                    android:hint="@string/languageText"
-                    android:inputType="text"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:textColorHint="#6F7070"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/TVDesiredLanguages" />
 
-                <EditText
-                    android:id="@+id/ETLanguage2"
+                <Spinner
+                    android:id="@+id/spinnerLanguage2"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/et_login"
-                    android:drawableStart="@drawable/baseline_language_black_24"
-                    android:drawablePadding="10dp"
-                    android:hint="@string/languageText"
-                    android:inputType="text"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:textColorHint="#6F7070"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ETLanguage1" />
+                    app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage1" />
 
                 <TextView
                     android:id="@+id/TVContactDetails"
@@ -352,7 +334,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ETLanguage2" />
+                    app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage2" />
 
                 <EditText
                     android:id="@+id/ETmobileNo"
@@ -362,7 +344,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/et_login"
-                    android:drawableStart="@android:drawable/ic_menu_call"
+                    android:drawableStart="@drawable/baseline_contact_phone_black_24"
                     android:drawablePadding="10dp"
                     android:hint="@string/contactPhoneText"
                     android:inputType="text|phone"
@@ -382,7 +364,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="76dp"
                     android:background="@drawable/et_login"
-                    android:drawableStart="@android:drawable/ic_dialog_email"
+                    android:drawableStart="@drawable/baseline_email_black_24"
                     android:drawablePadding="10dp"
                     android:hint="@string/contactEmailText"
                     android:inputType="textEmailAddress"
